--- a/table_recognition/table_recognition.ipynb
+++ b/table_recognition/table_recognition.ipynb
@@ -29,52 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "630e4957",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Using cached matplotlib-3.5.2-cp39-cp39-win_amd64.whl (7.2 MB)\n",
-      "Collecting fonttools>=4.22.0\n",
-      "  Using cached fonttools-4.34.4-py3-none-any.whl (944 kB)\n",
-      "Collecting kiwisolver>=1.0.1\n",
-      "  Using cached kiwisolver-1.4.4-cp39-cp39-win_amd64.whl (55 kB)\n",
-      "Collecting cycler>=0.10\n",
-      "  Using cached cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\version_control\\conda\\envs\\table-cell\\lib\\site-packages (from matplotlib) (3.0.4)\n",
-      "Collecting pillow>=6.2.0\n",
-      "  Using cached Pillow-9.2.0-cp39-cp39-win_amd64.whl (3.3 MB)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in d:\\version_control\\conda\\envs\\table-cell\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.17 in d:\\version_control\\conda\\envs\\table-cell\\lib\\site-packages (from matplotlib) (1.23.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in d:\\version_control\\conda\\envs\\table-cell\\lib\\site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: six>=1.5 in d:\\version_control\\conda\\envs\\table-cell\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Installing collected packages: pillow, kiwisolver, fonttools, cycler, matplotlib\n",
-      "Successfully installed cycler-0.11.0 fonttools-4.34.4 kiwisolver-1.4.4 matplotlib-3.5.2 pillow-9.2.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "0e8e9a7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import cv2\n",
-    "from matplotlib import pyplot as plt\n",
-    "import table_recognition\n",
-    "import math"
+    "import table_recognition"
    ]
   },
   {
@@ -210,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('table-cell')",
    "language": "python",
    "name": "python3"
   },
@@ -225,6 +185,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d98a2960da400defc17639f822e3e0e6bb064da36fbd3b8fde93041479e230b1"
+   }
   }
  },
  "nbformat": 4,
