Update driver code for module table_recognition

--- a/table_recognition/table_recognition.ipynb
+++ b/table_recognition/table_recognition.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "488db416",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "09e44da4",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0ce88482",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9ed8564b",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8bfd2e94",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c5ff08e4",
    "metadata": {},
    "outputs": [
@@ -485,6 +485,8 @@
    ],
    "source": [
     "# plot the inference\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt \n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(output[\"debug_image\"])\n",
     "plt.tight_layout()"
