--- a/text_detection/end-to-end.ipynb
+++ b/text_detection/end-to-end.ipynb
@@ -3523,7 +3523,7 @@
     "    # import os\n",
     "    offset = 1\n",
     "    \n",
-    "    mmocr = MMOCR(det='TextSnake', recog=None)\n",
+    "    mmocr = MMOCR(det='MaskRCNN_IC17', recog=None)\n",
     "\n",
     "    results = mmocr.readtext(img_path, output='outputs/demo_text_det_pred.jpg')\n",
     "\n",
